# eso

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
eso/: __init__.py  esolang.py  exceptions.py  getch.py  metadata.py  transform.py
eso/cli/: __init__.py  _helper.py  aaa.py  befunge.py  brainfuck.py  brainz.py  detailedfuck.py  lazyfuck.py  omam.py  pikalang.py  roadrunner.py
eso/esolangs/: __init__.py  compile.py
eso/esolangs/aaa/: __init__.py  aaa.py
eso/esolangs/befunge/: __init__.py  _befunge.py  befunge.py  compiler.py  configuration.py  const.py  interpreter.py
eso/esolangs/brainfuck/: __init__.py  _brainfuck.py  brainfuck.py  brainfuck_like.py  compiler.py  configuration.py  interpreter.py  preprocessing.py
eso/esolangs/brainz/: __init__.py  _brainz.py  brainz.py
eso/esolangs/detailedfuck/: __init__.py  detailedfuck.py
eso/esolangs/lazyfuck/: __init__.py  lazyfuck.py
eso/esolangs/omam/: __init__.py  omam.py
eso/esolangs/pikalang/: __init__.py  pikalang.py
eso/esolangs/roadrunner/: __init__.py  roadrunner.py
tests/: test_befunge.py  test_brainfuck.py  test_brainz.py
