[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "eso"
version = "0.0.1"
dependencies = [
  "loguru",
  "pydantic",
]
requires-python = ">=3.13.5"
authors = [
  {name = "Théo Bori", email = "theobori@disroot.org"}
]
maintainers = [
  {name = "Théo Bori", email = "theobori@disroot.org"}
]
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
statistics = "nixpkgs_lib.scripts.statistics:main"

[project.urls]
Homepage = "https://github.com/theobori/eso"
Documentation = "https://github.com/theobori/eso"
Repository = "https://github.com/theobori/eso"

[tool.setuptools]
packages = ["eso"]
