[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "eso"
version = "0.0.1"
dependencies = [
  "pydantic",
  "distutils",
]
requires-python = ">=3.13.5"
authors = [
  {name = "Théo Bori", email = "theobori@disroot.org"}
]
maintainers = [
  {name = "Théo Bori", email = "theobori@disroot.org"}
]
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.scripts]
eso-brainfuck = "eso.cli.brainfuck:cli_brainfuck"
eso-befunge = "eso.cli.befunge:cli_befunge"
eso-brainz = "eso.cli.brainz:cli_brainz"
eso-aaa = "eso.cli.aaa:cli_aaa"
eso-pikalang = "eso.cli.pikalang:cli_pikalang"
eso-lazyfuck = "eso.cli.lazyfuck:cli_lazyfuck"

[project.urls]
Homepage = "https://github.com/theobori/eso"
Documentation = "https://github.com/theobori/eso"
Repository = "https://github.com/theobori/eso"

[tool.setuptools]
packages = ["eso"]
